--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico">
     <title>Negotiator</title>
   </head>
-  <body>
+  <body style="min-width: 400px">
     <noscript>
       <strong>We're sorry but Negotiator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
