--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="favicon.ico">
     <title>Negotiator</title>
   </head>
-  <body style="min-width: 400px">
+  <body>
     <noscript>
       <strong>We're sorry but Negotiator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+  <div id="app" style="min-width: 25rem;"></div>
     <script type="module" src="/src/main.js"></script>
     <!-- built files will be auto injected -->
   </body>
